<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pootis Quiz</string>
    <string name="afa">afa</string>
    <string name="click_on_screen_to_continue">Click to continue!</string>
    <string name="img">img</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_one"><u>Create one!</u></string>
    <string name="sign_in">Login</string>
    <string name="sign_in_btn">Login</string>
    <string name="e_mail">E-Mail</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in_reg"><u>Login!</u></string>
    <string name="sign_up_btn">Create Account</string>
    <string name="sign_up">Create Account</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    <string name="username">Username</string>
    <string name="none" />
    <string name="noText">.</string>
    <string name="WelcomeBack">Welcome Back</string>
    <string name="termsLine1">Control of personal data and content.</string>
    <string name="termsLine2">We value your privacy and want to ensure that you are aware of the type of data Pooties Quiz uses.</string>
    <string name="termsLine3">We have collected some information about you, such as your name for display in your profile, email for login.</string>
    <string name="termsLine4">Please read our privacy policy below for more details.</string>
    <string name="termsLine5">By clicking on Accept, you agree to our Terms and Conditions and our Privacy Policy.</string>
    <string name="to">To</string>
    <string name="pootis">Pootis</string>
    <string name="welcome">Welcome</string>
    <string name="accept">I Accept!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="definitions_fragment_label">\n</string>
    <string name="shop_fragment_label" />
    <string name="profile_fragment_label">\n</string>
    <string name="score_fragment_label" />
    <string name="main_page_fragment_label" />
    <string name="theme_text">Theme:</string>
    <string name="score_text">Score:</string>
    <string name="Achievement_earned_at">Achievement earned at:</string>
    <string name="Delete_Scores">Delete Scores</string>
    <string name="Delete_Achievements">Delete Achievements</string>
    <string name="Delete_All_Data">Delete All Data</string>
    <string name="SinglePlayer">SinglePlayer</string>
    <string name="Achievements">Achievements</string>
    <string name="Congrats">Congrats!</string>
    <string name="Finish">Finish</string>
    <string name="Previous">Previous</string>
    <string name="Next">Next</string>
    <string name="My_Scores">My Scores</string>
    <string name="Theme">Theme</string>
    <string name="Date">Date</string>
    <string name="Score">Score</string>
    <string name="Buy_Our_Merch">Buy Our Merch</string>
    <string name="scoresitem">5 / 7</string>
    <string name="Item">Item</string>
    <string name="Price">Price:</string>
    <string name="Prices">Price</string>
    <string name="Profile">Profile</string>
    <string name="Home">Home</string>
    <string name="Shop">Shop</string>
    <string name="Settings">Settings</string>
    <string name="playedTheme">You finished a</string>
    <string name="quiz">quiz!</string>
    <string name="you">You got a</string>
    <string name="wellDone">out of 7, well done!</string>
    <string name="Unknown_Theme">Unknown Theme</string>
    <string name="error_Theme">Error: No question found</string>
    <string name="selectAnswer">Please select an answer</string>
    <string name="logout">Logout</string>
    <string name="logoutConf">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleteScoresConf">Are you sure you want to delete your score?</string>
    <string name="deleteAchievementsConf">Are you sure you want to delete your achievements?</string>
    <string name="deleteAllDataConf">Are you sure you want to delete all your data?</string>
    <string name="deleteScores">Delete Sores</string>
    <string name="cancel">Cancel</string>
    <string name="deleteAchievements">Delete Achievements</string>
    <string name="deleteAllData">Delete All Data</string>
    <string name="deleteScoresSuccess">Scores deleted successfully!</string>
    <string name="deleteAchievementsSuccess">Achievements deleted successfully!</string>
    <string name="deleteAllDataSuccess">All data deleted successfully!</string>
    <string name="login_successful">Login Successful!</string>
    <string name="email_password_no_match">Email and Password didn\'t match!</string>
    <string name="insert_email">Please insert your email!</string>
    <string name="insert_password">Please insert your password!</string>
    <string name="invalid_email">Invalid email address!</string>
    <string name="app_exit">Do You Want To Exit The App?</string>
    <string name="quizQuit">"Do You Want Quit The Quiz?"</string>
    <string name="insert_username">Please insert your username!</string>
    <string name="email_exists">Email already used!</string>
    <string name="account_created">Account Created!</string>
    <string name="noPlayed" >You haven\'t played yet!</string>
    <string name="deleteScore" >Delete Score</string>
    <string name="deleteScoreConf" >Are you sure you want to delete this score?</string>
    <string name="close" >Close</string>
    <string name="ThemePlayed" >Theme Played: </string>
    <string name="ScoreInfo" >Score Info</string>
    <string name="Error">There was an error loading the themes, try again later</string>
    <string name="username_exists">Username already used!</string>

</resources>