<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/mainPageFragment"
    style="@style/Widget.MaterialComponents.BottomNavigationView.Colored">

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/bxs_user__1_"
        android:title="@string/Profile" />
    <item
        android:id="@+id/scoreFragment"
        android:icon="@drawable/bxs_bar_chart_alt_2"
        android:title="@string/Score" />
    <item
        android:id="@+id/mainPageFragment"
        android:icon="@drawable/homeicon"
        android:title="@string/Home" />
    <item
        android:id="@+id/shopFragment"
        android:icon="@drawable/bxs_store"
        android:title="@string/Shop" />
    <item
        android:id="@+id/definitionsFragment"
        android:icon="@drawable/bxs_cog__1_"
        android:title="@string/Settings" />
</menu>