<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogRegFragments.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="144dp"
            android:layout_marginBottom="24dp"
            android:text="@string/don_t_have_an_account"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="@+id/tbPassword"
            app:layout_constraintHorizontal_bias="0.97"
            app:layout_constraintStart_toStartOf="@+id/tbPassword"
            app:layout_constraintTop_toBottomOf="@+id/tbPassword" />

        <TextView
            android:id="@+id/lblCreateOne"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:layout_marginBottom="25dp"
            android:clickable="true"
            android:contextClickable="true"
            android:focusable="true"
            android:gravity="center|start"
            android:singleLine="false"
            android:text="@string/create_one"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textColorLink="@color/white"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            tools:ignore="TextSizeCheck" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="112dp"

            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="42sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_marginTop="98dp"
            android:text="@string/sign_in_btn"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="@+id/tbPassword"
            app:layout_constraintStart_toStartOf="@+id/tbPassword"
            app:layout_constraintTop_toBottomOf="@+id/tbPassword"
            app:strokeColor="@color/black"
            app:strokeWidth="3dp"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/tbPassword"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="44dp"
            android:autofillHints=""
            android:drawableEnd="@drawable/ic_lock"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/tbEmail"
            app:layout_constraintStart_toStartOf="@+id/tbEmail"
            app:layout_constraintTop_toBottomOf="@+id/tbEmail"
            tools:ignore="LabelFor,TextContrastCheck"
            tools:text="Password" />

        <EditText
            android:id="@+id/tbEmail"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="100dp"
            android:autofillHints=""
            android:drawableEnd="@drawable/ic_email"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="LabelFor,TextContrastCheck" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="105dp"
            android:layout_height="105dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:srcCompat="@drawable/logo_final_01"
            tools:ignore="ContentDescription,ImageContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>