<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogRegFragments.RegisterFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F9B01A"
        android:theme="@style/Theme.Quiz">

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="-20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="-20dp"
            android:background="@drawable/buttons"
            app:layout_constraintBottom_toBottomOf="@+id/textView15"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3" />

        <TextView
            android:id="@+id/textView15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="36dp"
            android:text="@string/already_have_an_account"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/view2" />

        <EditText
            android:id="@+id/tbEmail"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:backgroundTint="@color/black"
            android:drawableEnd="@drawable/ic_email"
            android:ems="10"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/tbUsername"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tbUsername"
            app:layout_constraintTop_toBottomOf="@+id/tbUsername"
            tools:ignore="LabelFor,TextContrastCheck" />

        <EditText
            android:id="@+id/tbUsername"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="70dp"
            android:autofillHints=""
            android:backgroundTint="@color/black"
            android:drawableEnd="@drawable/ic_person"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/textView17"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/textView17"
            tools:ignore="LabelFor,TextContrastCheck" />

        <EditText
            android:id="@+id/tbPassword"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:backgroundTint="@color/black"
            android:drawableEnd="@drawable/ic_lock"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/tbEmail"
            app:layout_constraintStart_toStartOf="@+id/tbEmail"
            app:layout_constraintTop_toBottomOf="@+id/tbEmail"
            tools:ignore="LabelFor,TextContrastCheck" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginTop="60dp"
            android:autofillHints=""
            android:backgroundTint="#F9B01A"
            android:text="@string/sign_up_btn"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:cornerRadius="25dp"
            app:layout_constraintEnd_toEndOf="@+id/tbPassword"
            app:layout_constraintStart_toStartOf="@+id/tbPassword"
            app:layout_constraintTop_toBottomOf="@+id/tbPassword"
            app:strokeColor="@color/black"
            app:strokeWidth="3dp"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/TVLogIn"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_marginBottom="29dp"
            android:clickable="true"
            android:contextClickable="true"
            android:focusable="true"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/sign_in_reg"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textColorLink="@color/black"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/view2"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintStart_toEndOf="@+id/textView15"
            app:layout_constraintTop_toTopOf="@+id/textView15"
            app:layout_constraintVertical_bias="0.75"
            tools:ignore="TextSizeCheck,TouchTargetSizeCheck" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="105dp"
            android:layout_height="105dp"
            app:layout_constraintBottom_toTopOf="@+id/textView17"
            app:layout_constraintEnd_toEndOf="@+id/textView17"
            app:layout_constraintStart_toStartOf="@+id/textView17"
            app:srcCompat="@drawable/logo_final_01"
            tools:ignore="ContentDescription,ImageContrastCheck" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:text="@string/sign_up"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="42sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>